--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="list_view_item_bottom_margin">5dp</dimen>
+    <dimen name="list_view_item_top_margin">3dp</dimen>
 </resources>
